Try to implement java relaunching
a bit hacky, but should overall reduce the amount of java hacks needed.