@@ -1,6 +1,7 @@
 package org.kettingpowered.launcher;
 
 import org.kettingpowered.ketting.internal.KettingConstants;
+import org.kettingpowered.ketting.internal.Tuple;
 import org.kettingpowered.launcher.dependency.*;
 import org.kettingpowered.launcher.lang.I18n;
 
@@ -10,16 +11,11 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.lang.instrument.Instrumentation;
 import java.lang.reflect.Field;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLClassLoader;
-import java.net.URLDecoder;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 import java.util.jar.JarFile;
+import java.util.stream.Collectors;
 
 /**
  * @author C0D3 M4513R
@@ -34,7 +30,10 @@ public class Main {
     //This will only pull the INSTALLER_LIBRARIES_FOLDER from the compileTime KettingConstants version.
     public static final String INSTALLER_LIBRARIES_FOLDER = KettingConstants.INSTALLER_LIBRARIES_FOLDER;
     public static final MavenArtifact KETTINGCOMMON = new MavenArtifact(KettingConstants.KETTING_GROUP, "kettingcommon", "1.0.0", Optional.empty(), Optional.of("jar"));
-    static Instrumentation INST; 
+    static Instrumentation INST;
+    private static KettingLauncher launcher = null;
+    private static List<String> jvmArg = new ArrayList<>();
+    private static List<String> procArg = new ArrayList<>();
 
     public static void agentmain(String agentArgs, Instrumentation inst) throws Exception {
         if (DEBUG) System.out.println("[Agent] premain lib load start");
@@ -64,6 +63,17 @@ public class Main {
         }
 
         if (DEBUG) System.out.println("[Agent] premain lib load end");
+
+        List<String> args = List.of(ProcessHandle.current().info().arguments().orElseGet(()->new String[0]));
+        int index = args.indexOf("-jar");
+        if (index >= 0){
+            jvmArg = args.subList(0, index);
+            int procArgStart = Math.min(index+2, args.size()-1);
+            procArg = args.subList(procArgStart, args.size());
+        }
+        launcher = new KettingLauncher(procArg.toArray(String[]::new));
+        launcher.init();
+        launcher.prepareLaunch();
     }
     
     @SuppressWarnings("unused")
@@ -157,9 +167,76 @@ public class Main {
     }
 
     public static void main(String[] args) throws Exception {
-        final KettingLauncher launcher = new KettingLauncher(args);
-        launcher.init();
-        launcher.prepareLaunch();
-        launcher.launch();
+        String main = launcher.launch();
+        final var defaultArgs = getDefaultArgs(launcher.args, launcher.libs, main);
+        List<String> newArgs = new ArrayList<>(jvmArg);
+        newArgs.addAll(defaultArgs.t1());
+        newArgs.add("-Dketting.remapper.dump=./.mixin.out/plugin_classes");
+        newArgs.add(main);
+        newArgs.addAll(defaultArgs.t2());
+
+        if (Main.DEBUG) System.out.println(I18n.get("debug.launching") + Arrays.toString(newArgs.toArray()));
+        Runtime.getRuntime().gc();
+
+        new ProcessBuilder(newArgs)
+                .inheritIO()
+                .start();
+        //purposely exit here. Some people will add args that specify a minimum ram allocation.
+    }
+    
+    private static Tuple<List<String>, List<String>> getDefaultArgs(ParsedArgs args, Libraries libraries, String main){
+        //noinspection EnhancedSwitchMigration
+        switch (main) {
+            case "cpw.mods.bootstraplauncher.BootstrapLauncher": 
+                return new Tuple<>(
+                    Arrays.asList(
+                            "-p",
+                            Arrays.stream(libraries.getLoadedLibs())
+                                    .filter(url -> 
+                                            url.toString().contains("org/ow2/asm") || 
+                                            url.toString().contains("cpw/mods/securejarhandler") || 
+                                            url.toString().contains("cpw/mods/bootstraplauncher") || 
+                                            url.toString().contains("net/minecraftforge/JarJarFileSystems")
+                                    ).map(url-> {
+                                        try {
+                                            return url.toURI();
+                                        } catch (URISyntaxException e) {
+                                            return null;
+                                        }
+                                    }).filter(Objects::nonNull)
+                                    .map(dep->new File(dep).getAbsolutePath())
+                                    .collect(Collectors.joining(File.pathSeparator)),
+                            "--add-modules ALL-MODULE-PATH",
+                            "--add-opens java.base/java.util.jar=cpw.mods.securejarhandler",
+                            "--add-opens java.base/java.lang.invoke=cpw.mods.securejarhandler",
+                            "--add-exports java.base/sun.security.util=cpw.mods.securejarhandler",
+                            "--add-exports jdk.naming.dns/com.sun.jndi.dns=java.naming",
+                            "-DlegacyClassPath="+System.getProperty("java.class.path"),
+                            "-DlibraryDirectory=libraries",
+                            "-Djava.net.preferIPv6Addresses=system"
+                        ),
+                        Arrays.asList(
+                                "--launchTarget",
+                                args.launchTarget()!=null? args.launchTarget() : "forgeserver",
+                                "--fml.forgeVersion",
+                                KettingConstants.FORGE_VERSION,
+                                "--fml.mcVersion",
+                                KettingConstants.MINECRAFT_VERSION,
+                                "--fml.forgeGroup",
+                                "net.minecraftforge",
+                                "--fml.mcpVersion",
+                                KettingConstants.MCP_VERSION
+                        )
+                );
+            case  "net.minecraftforge.bootstrap.ForgeBootstrap":
+            default:
+                return new Tuple<>(
+                        Collections.emptyList(),
+                        List.of(
+                                "--launchTarget", 
+                                args.launchTarget()!=null? args.launchTarget() : "forge_server"
+                        )
+                );
+        }
     }
 }
